--- a/styles/style.css
+++ b/styles/style.css
@@ -5,16 +5,45 @@ body {
 }
 
 body {
-    background: linear-gradient(lightblue, darkblue);
+    background: linear-gradient(orange, red);
     height: 100vh;
     display: flex;
     flex-direction: column;
     font-family: 'Righteous', sans-serif;
 }
 
+button {
+    padding: 10px 25px;
+    border-radius: 20px;
+    border: none;
+    text-transform: uppercase;
+    background: white;
+    cursor: pointer;
+}
+
+button:hover {
+    transition: background-color 75ms linear;
+    background: orange;
+    color: white;
+    font-weight: bold;
+}
+
 header {
-    background: lightgreen;
+    background: red;
+    color: white;
     font-size: 1.25rem;
+    text-shadow: 1px 1px black;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
+}
+
+h1 {
+    font-size: 5vw;
+    word-wrap: break-word;
+    white-space: wrap;
+    color: white;
+    text-align: center;
+    text-shadow: .3vw .3vw orange,
+                 .6vw .6vw red;
 }
 
 header,
@@ -23,7 +52,8 @@ footer {
 }
 
 footer {
-    color: lightblue;
+    color: white;
+    text-shadow: 1px 1px black;
 }
 
 main {
@@ -110,12 +140,12 @@ td {
     position: relative;
 }
 
-#time-remaining-label {
+#elasped-time-label {
     text-align: left;
 }
 
-#time-remaining-label::before {
-    content: "Time Remaining: "
+#elasped-time-label::before {
+    content: "Elasped Time: "
 }
 
 #max-population-label {
@@ -130,20 +160,30 @@ td {
 #start-game-table-overlay,
 #end-game-table-overlay {
     position: absolute;
-    background: black;
+    background: rgba(0, 0, 0, 0.7);
     width: 100%;
     height: 100%;
     top: 0;
 }
 
-#start-game-table-overlay {
-}
-
-#end-game-table-overlay {
+#end-game-table-overlay > section,
+#start-game-table-overlay > section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
 .hidden {
     display: none;
+}
+
+.instructions {
+    color: white;
+    margin: 0 30px 60px 30px;
+    font-size: 1.3vw;
+    text-align: center;
 }
 
 @keyframes flashred {
