--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 body {
-    background: linear-gradient(orange, red);
+    background: linear-gradient(lime, darkgreen);
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -29,7 +29,7 @@ button:hover {
 }
 
 header {
-    background: red;
+    background: green;
     color: white;
     font-size: 1.25rem;
     text-shadow: 1px 1px black;
@@ -48,13 +48,13 @@ a:hover {
 }
 
 h1 {
-    font-size: 5vw;
+    font-size: 10vmin;
     word-wrap: break-word;
     white-space: wrap;
     color: white;
     text-align: center;
-    text-shadow: .3vw .3vw orange,
-                 .6vw .6vw red;
+    text-shadow: .5vmin .5vmin lime,
+                 1vmin 1vmin darkgreen;
 }
 
 header,
@@ -99,8 +99,8 @@ td {
 
 td {
     box-sizing: border-box;
-    height: min(10vw, 10vh);
-    width: min(10vw, 10vh);
+    height: 10vmin; /* before: min(10vw, 10vh); */
+    width: 10vmin;
 }
 
 .player {
@@ -114,22 +114,22 @@ td {
     content: '';
     border-radius: 50%;
     background: black;
-    width: 1vw;
-    height: 1vw;
-    top: 2vw;
-    left: 1.2vw;
-    box-shadow: 2.75vw 0 black;
+    width: 1vmin;
+    height: 1vmin;
+    top: 2vmin;
+    left: 2.75vmin;
+    box-shadow: 2.75vmin 0 black;
 }
 
 .player::after {
     position: absolute;
     content: '';
     border-radius: 5px;
-    width: 4vw;
-    height: 2vw;
-    top: 3.25vw;
-    left: .8vw;
-    border: .2vw solid black;
+    width: 5vmin;
+    height: 6vmin;
+    top: 3.25vmin;
+    left: 2vmin;
+    border: .2vmin solid black;
     background: linear-gradient(white 25%, red 25%, red 75%, white 75%);
     animation: 300ms infinite alternate-reverse munching;
 }
@@ -149,29 +149,29 @@ td {
 
 .plant-stage-1::before {
     position: absolute;
-    top: 1vw;
-    left: 1vw;
+    top: 1vmin;
+    left: 1vmin;
     content: '';
     border-radius: 50%;
     background-color: black;
-    height: 1vw;
-    width: 1vw;
-    box-shadow: 2vw 0 black,
-                1vw 1.5vw black;
+    height: 1vmin;
+    width: 1vmin;
+    box-shadow: 2vmin 0 black,
+                1vmin 1.5vmin black;
 }
 
 .plant-stage-1::after {
     position: absolute;
-    top: 1.1vw;
-    left: 1.1vw;
+    top: 1.1vmin;
+    left: 1.1vmin;
     content: '';
     border-radius: 50%;
     background-color: white;
-    height: .4vw;
-    width: .4vw;
-    box-shadow: 2vw 0 white,
-                1.4vw 2vw palevioletred,
-                1.3vw 2vw palevioletred;
+    height: .4vmin;
+    width: .4vmin;
+    box-shadow: 2vmin 0 white,
+                1.4vmin 2vmin palevioletred,
+                1.3vmin 2vmin palevioletred;
 }
 
 .plant-stage-2 {
@@ -182,26 +182,26 @@ td {
 
 .plant-stage-2::before {
     position: absolute;
-    top: 1.8vw;
-    left: 1.5vw;
+    top: 1.8vmin;
+    left: 1.5vmin;
     content: '';
     border-radius: 50%;
     background-color: black;
-    height: .75vw;
-    width: .75vw;
-    box-shadow: 2.8vw 0 black;
+    height: .75vmin;
+    width: .75vmin;
+    box-shadow: 2.8vmin 0 black;
     transition: opacity 300ms linear;
 }
 
 .plant-stage-2::after {
     position: absolute;
-    top: 3.3vw;
-    left: 1.5vw;
+    top: 3.3vmin;
+    left: 1.5vmin;
     content: '';
     border-radius: 5px;
     background-color: black;
-    height: .5vw;
-    width: 3.8vw;
+    height: .5vmin;
+    width: 3.8vmin;
     transition: opacity 200ms linear;
 }
 
@@ -214,23 +214,23 @@ td {
 .plant-stage-3::after {
     content: '';
     position: absolute;
-    height: .5vw;
-    width: 1.25vw;
-    top: 2.2vw;
-    left: 1vw;
+    height: .5vmin;
+    width: 1.25vmin;
+    top: 2.2vmin;
+    left: 1vmin;
     background-color: white;
     border-radius: 2px;
-    box-shadow: 3vw 0 white;
+    box-shadow: 3vmin 0 white;
     transition: opacity 200ms linear;
 }
 
 .plant-stage-3::before {
     content: '';
     position: absolute;
-    height: .5vw;
-    width: 4.25vw;
-    top: 4vw;
-    left: 1vw;
+    height: .5vmin;
+    width: 4.25vmin;
+    top: 4vmin;
+    left: 1vmin;
     background-color: white;
     border-radius: 2px;
     transition: opacity 200ms linear;
@@ -300,7 +300,7 @@ td {
     color: white;
     text-shadow: 1px 1px black;
     margin: 0 30px 60px 30px;
-    font-size: 1.3vw;
+    font-size: 2vmin;
     text-align: center;
 }
 
@@ -316,12 +316,12 @@ td {
 
 @keyframes munching {
     from {
-        height: 2vw;
+        height: 2vmin;
         background: linear-gradient(white 25%, red 25%, red 75%, white 75%);
     }
 
     to {
-        height: 1vw;
+        height: 1vmin;
         background: linear-gradient(white 46%, black 46%, black 54%, white 54%);
     }
     
